Adicionado o link para o codigo do curriculo

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     <h3 class="descricao">Fluência em Inglês</h3>
                     <h3 class="descricao">Conhecimento básico de Espanhol</h3>
                 </div>
-                <div class="secao" id="divQualidades">
-                    <h2 class="descricao">Experiências</h2>
+                <div class="secao" id="divHabilidades">
+                    <h2 class="descricao">Habilidades</h2>
                     <h3 class="descricao">Adaptabilidade</h3>
                     <h4 class="descricao1">Adquirida devido a grande quantidade de trabalhos em grupo</h4>
                     <h3 class="descricao">Raciocínio rápido</h3>
@@ -73,6 +73,9 @@
                     <h4 class="descricao1">Experiências com Arduino</h4>
                 </div>
             </div>
+        </div>
+        <div id="divLinkCurriculo">
+            <a class="center contatinho" id="linkCurriculo" href="https://github.com/GiulianoBontempo/curriculo">Código autoral do currículo</a>
         </div>
     </div>
 </body>
